<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEBEB"
    android:orientation="vertical"
    tools:context="com.Syuan.azy170331.activitis.activitis.MainActivity">


    <com.Syuan.azy170331.activitis.view.TitleBarView
        android:id="@+id/tvb"
        android:layout_width="match_parent"
        android:layout_height="50dp">

    </com.Syuan.azy170331.activitis.view.TitleBarView>

    <include
        layout="@layout/layout_circle_speed_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_weight="3"/>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_rocket"
            style="@style/tv_main"
            android:drawableTop="@mipmap/icon_rocket"
            android:text="@string/main_speedup" />

        <TextView
            android:id="@+id/tv_softmgr"
            style="@style/tv_main"
            android:drawableTop="@mipmap/icon_softmgr"
            android:text="@string/main_softmgr" />

        <TextView
            android:id="@+id/tv_phonemgr"
            style="@style/tv_main"
            android:drawableTop="@mipmap/icon_phonemgr"
            android:text="@string/main_phonemgr" />


    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView

            android:id="@+id/tv_telmgr"
            style="@style/tv_main"
            android:drawableTop="@mipmap/icon_telmgr"
            android:text="@string/main_telmgr" />

        <TextView
            android:id="@+id/tv_filemgr"
            style="@style/tv_main"
            android:drawableTop="@mipmap/icon_filemgr"
            android:text="@string/main_filemgr" />

        <TextView
            android:id="@+id/tv_sdclean"
            style="@style/tv_main"
            android:drawableTop="@mipmap/icon_sdclean"
            android:text="@string/main_sdclean" />


    </LinearLayout>


</LinearLayout>
